# oxen-wallet

./: .gitignore  Deployment.md  LICENSE.md  README.md  analysis_options.yaml  privacy-policy.md  pubspec.yaml
.github/: pull_request_template.md
android/app/: build.gradle  proguard-rules.pro
assets/: changelog.yml  node_list.yml  testnet_node_list.yml
assets/faq/: faq_de.json  faq_en.json
assets/text/: Terms_of_Use.txt  Wallet_Adjectives.txt  Wallet_Nouns.txt
cw_monero/android/: CMakeLists.txt
cw_monero/android/jni/: monero_jni.cpp
cw_monero/lib/: monero_api.dart
ios/Flutter/: .last_build_id
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: devtools.dart  main.dart  palette.dart  router.dart  routes.dart  theme_changer.dart  themes.dart
lib/l10n/: intl_de.arb  intl_en.arb  intl_fr.arb
lib/src/: start_updating_price.dart
oxen_coin/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
oxen_coin/android/: CMakeLists.txt  build.gradle  settings.gradle
oxen_coin/android/jni/: oxen_jni.cpp
oxen_coin/android/src/main/: AndroidManifest.xml
oxen_coin/android/src/main/kotlin/io/oxen/coin/: FlutterMethodHandler.kt  OxenApi.kt  OxenCoinPlugin.kt  OxenWalletSyncStatusListener.kt
oxen_coin/ios/: oxen_coin.podspec
oxen_coin/lib/: account_list.dart  oxen_api.dart  oxen_coin_structs.dart  signatures.dart  stake.dart  subaddress_list.dart  transaction_history.dart  types.dart  wallet.dart  (+1 more)
test/: widget_test.dart
tool/: .secrets-test.json  create_secrets.dart  download-android-deps.sh  download-ios-deps.sh  secrets.dart
(+293 files in other folders)
